--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <p>I'm <span class="typed" data-typed-items="Python Developer, Web developer, Data Science Enthusiast"></span></p>
       <div class="social-links">
         <a href="https://github.com/khatriharsh28" class="twitter"><i class="bx bxl-github"></i></a>
-        <a href="https://www.facebook.com/" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.facebook.com/harsh.khatri.507464" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/harsh-khatri-79b1ab21b" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
