--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Resume-my abilities</h2>
           
         </div>
 
